# ml-play

./: .gitignore  data.py  outflow.ipynb  process.py  pyproject.toml  requirements.txt  test.csv  tester.ipynb
fipy/: fidata.py  forecast.py
